src/objects/Portfolios_Owner__c.object
<CustomObject>
    <fields>
        <fullName>A3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DI_Logic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DI (CoPQ)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAIC_DMADV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DMAIC / DMADV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Is_Super_Portfolio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Super Portfolio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lean_including_Kaizen__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lean (including Kaizen)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIPP_Contact__c</fullName>
        <label>QIPP Contact</label>
        <referenceTo>QIPP_Contacts__c</referenceTo>
        <relationshipLabel>Portfolios Owners</relationshipLabel>
        <relationshipName>Portfolios_Owners</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QIPP_Portfolio__c</fullName>
        <label>QIPP Portfolio</label>
        <referenceTo>QIPP_Portfolio__c</referenceTo>
        <relationshipLabel>Portfolios Owners</relationshipLabel>
        <relationshipName>Portfolios_Owners</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RCA_EDA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RCA/EDA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X8D__c</fullName>
        <defaultValue>false</defaultValue>
        <label>8D</label>
        <type>Checkbox</type>
    </fields>
    <label>Portfolios Owner</label>
    <nameField>
        <label>Portfolios Owner</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portfolios Owners</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>